依存関係の見直し