@@ -108,7 +108,7 @@ project(":sample-common") {
     dependencies {
         // springframework
         compile "org.springframework.boot:spring-boot-configuration-processor"
-        compile "org.springframework:spring-context"
+        compile "org.springframework.boot:spring-boot-starter"
 
         compile "org.apache.commons:commons-lang3:3.1"
         compile "org.apache.commons:commons-compress:1.14"
@@ -117,7 +117,6 @@ project(":sample-common") {
         compile "commons-digester:commons-digester"
         compile "commons-io:commons-io:2.5"
         compile "org.apache.tika:tika-core:1.15"
-        compile "org.asynchttpclient:async-http-client:2.0.32"
         compile "dom4j:dom4j"
         compile "com.ibm.icu:icu4j:59.1"
     }
@@ -135,9 +134,6 @@ project(":sample-domain") {
 
     dependencies {
         compile project(":sample-common")
-
-        // aspectj
-        compile "org.aspectj:aspectjrt"
 
         // springframework
         compile "org.springframework.boot:spring-boot-starter-aop"
@@ -235,10 +231,6 @@ project(":sample-web-base") {
 }
 
 project(":sample-web-admin") {
-    bootRun {
-        addResources = true
-        jvmArgs "-XX:TieredStopAtLevel=1", "-Xverify:none"
-    }
     bootRepackage {
         executable = true
     }
@@ -254,10 +246,6 @@ project(":sample-web-admin") {
 }
 
 project(":sample-web-front") {
-    bootRun {
-        addResources = true
-        jvmArgs "-XX:TieredStopAtLevel=1", "-Xverify:none"
-    }
     bootRepackage {
         executable = true
     }
@@ -274,8 +262,6 @@ project(":sample-web-front") {
 
 project(":sample-batch") {
     bootRun {
-        addResources = true
-
         // プロジェクトプロパティを引数として渡す
         if (project.hasProperty("args")) {
             args project.args.split("\\s+")
